--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,79 @@
 <button type='button'>Маркетинг</button>
 </div>
 <section>
+    <h1>Portfolio</h1>
     <ul>
         <li>
-            <h2></h2>
-            <p></p>
+            <a href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
             <p>Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
-                на защищённые сервера конкурентов.</p>
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""> <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star">
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/seafood.jpg" alt="Ресторан Seafood">
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/prime.jpg" alt="Проект Prime">
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/boxes.jpg" alt="Проект Boxes">
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/limedition.jpg" alt="Издание Limited Edition">
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/lab.jpg" alt="Проект LAB">
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
+        </li>
+        <li>
+            <a href=""><img src="./images/growingb.jpg" alt="Growing Business">
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак 
+                на защищённые сервера конкурентов.</p> </a>
         </li>
     </ul>
 </section>
