--- a/index.html
+++ b/index.html
@@ -4,86 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-    <a href="">
-        <span>Web</span>Studio
+    <header class="header">
+        <nav class="navigation">
+    <a class="logo link" href="">
+        <span class="web">Web</span>Studio
     </a>    
-    <ul>
-        <li> <a href="">Студия</a> </li>
-        <li> <a href="">Портфолио</a> </li>
-        <li> <a href="">Контакты</a> </li>
+    <ul class="navigation-list list">
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Студия</a> </li>
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Портфолио</a> </li>
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Контакты</a> </li>
     </ul>
 </nav>
-    <ul>
-        <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-        <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+    <ul class="list">
+        <li> <a class="header-mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+        <li> <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
     </ul>
     </header>
     <main>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+    <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="modal-button">Заказать услугу</button>
     </section>
 <section>
-    <ul>
+    <ul class="list">
+    <ul class="list">
         <li>
     <img src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
-    <h3>Внимание к деталям</h3> 
-    <p>Идейные соображения, а также начало повседневной 
+    <h3 class="subtitle">Внимание к деталям</h3> 
+    <p class="description">Идейные соображения, а также начало повседневной 
         работы по формированию позиции. </p>  
     </li>
     <li>
 <img src="../homework-01/images/Vector(1).svg" alt="Пунктуальность">
-<h3>Пунктуальность</h3> 
-<p>Задача организации, в особенности же рамки
+<h3 class="subtitle">Пунктуальность</h3> 
+<p class="description">Задача организации, в особенности же рамки
      и место обучения кадров влечет за собой. </p>  
 </li>
     <li>
 <img src="../homework-01/images/Vector(2).svg" alt="Планирование">
-<h3>Планирование</h3> 
-<p>Равным образом консультация с широким 
+<h3 class="subtitle">Планирование</h3> 
+<p class="description">Равным образом консультация с широким 
     активом в значительной степени обуславливает.</p>  
 </li>
     <li>
 <img src="../homework-01/images/Vector(3).svg" alt="Современные технологии">
-<h2>Современные технологии</h2> 
-<p>Значимость этих проблем настолько очевидна,
+<h3 class="subtitle">Современные технологии</h3> 
+<p class="description">Значимость этих проблем настолько очевидна,
      что реализация плановых заданий.</p>  
 </li>
 </ul>
 </section>
 <section>
-<h2>Чем мы занимаемся</h2>
-<ul>
+<h2 class="section-subtitle">Чем мы занимаемся</h2>
+<ul class="list">
     <li>
    <img src="../homework-01/images/img.jpg" alt="Десктопные приложения"  width="370"
    height="294">
-     <h3>Десктопные приложения</h3>
+     <h3 class="subtitle-box">Десктопные приложения</h3>
     </li>
     <li>
         <img src="../homework-01/images/box.jpg" alt="Мобильные приложения"  width="370"
         height="294">
-          <h3>Мобильные приложения</h3>
+          <h3 class="subtitle-box">Мобильные приложения</h3>
     </li>
     <li>
         <img src="../homework-01/images/img(1).jpg" alt="Дизайнерские решения"  width="370"
         height="294">
-          <h3>Дизайнерские решения</h3>
+          <h3 class="subtitle-box">Дизайнерские решения</h3>
     </li>
 </ul>
 </section>
 <section>
-    <h2>Наша команда</h2>
-   <ul>
+    <h2 class="section-subtitle">Наша команда</h2>
+   <ul class="list">
     <li>
         <img src="../homework-01/images/img(2).jpg" alt="Product Designer" width="270" height="260">
-        <h3 lang="ru">Николай Кучеренко</h3>
-        <p lang="en">Product Designer</p>
+        <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
+        <p lang="en" class="subtitle-position">Product Designer</p>
         <ul>
             <li> <a href="" aria-label="иконка инстаграма"></a>
             </li>
@@ -97,8 +102,8 @@
     </li>
     <li>
         <img src="../homework-01/images/img(3).jpg" alt="Frontend Developer" width="270" height="260">
-        <h3 lang="ru">Ольга Иванова</h3>
-        <p lang="en">Frontend Developer</p>
+        <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
+        <p lang="en"class="subtitle-position">Frontend Developer</p>
         <ul>
             <li> <a href="" aria-label="иконка инстаграма"></a>
             </li>
@@ -112,8 +117,8 @@
     </li>
     <li>
         <img src="../homework-01/images/img(4).jpg" alt="Marketing" width="270" height="260">
-        <h3 lang="ru">Андрей Шевченко</h3>
-        <p lang="en">Marketing</p>
+        <h3 lang="ru" class="subtitle-name">Андрей Шевченко</h3>
+        <p lang="en" class="subtitle-position">Marketing</p>
         <ul>
             <li> <a href="" aria-label="иконка инстаграма"></a>
             </li>
@@ -127,8 +132,8 @@
     </li>
     <li>
         <img src="../homework-01/images/img(5).jpg" alt="UI Designer" width="270" height="260">
-        <h3 lang="ru">Иван Николаев</h3>
-        <p lang="en">UI Designer</p>
+        <h3 lang="ru" class="subtitle-name">Иван Николаев</h3>
+        <p lang="en" class="subtitle-position">UI Designer</p>
         <ul>
             <li> <a href="" aria-label="иконка инстаграма"></a>
             </li>
@@ -144,7 +149,7 @@
 </section>
 <section>
     <h2>Постоянные клиенты</h2>
-    <ul>
+    <ul class="list">
         <li>
             <a href=""><img src="./images/client11.svg" alt="Company logo 1"/> </a>
         </li>
