--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </ul>
 </section>
 <section>
-    <h2>Постоянные клиенты</h2>
+    <h2 class="section-subtitle">Постоянные клиенты</h2>
     <ul class="list">
         <li>
             <a href=""><img src="./images/client11.svg" alt="Company logo 1"/> </a>
@@ -173,9 +173,10 @@
 </main>
 <footer>
   
-  <div>  <a href="">
-    <span>Web</span>Studio</a>
-    <address>
+  <div>  <a class="logo link" href="">
+    <span class="web">Web</span>Studio
+</a> 
+    <address class="address">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <a href="mailto:info@example.com">info@example.com</a> <br/>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
