--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
   <div>  <a class="logo link" href="">
     <span class="web">Web</span>Studio
 </a> 
-    <address class="address">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@example.com</a> <br/>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+    <address>
+        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
+        <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
     </address>
 </div>
 <div>
-<b>ПРИСОЕДИНЯЙТЕСЬ</b>
+<b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
 <ul>
     <li> <a href="" aria-label="иконка инстаграма"></a>
     </li>
@@ -196,7 +196,7 @@
 </ul>
 </div>
 <div>
-    <b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+    <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
 </div>
 </footer>
 </body>
