--- a/portfolio.html
+++ b/portfolio.html
@@ -4,105 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-    <a href="">
-        <span>Web</span>Studio
+    <header class="header">
+        <nav class="navigation">
+    <a class="logo link" href="">
+        <span class="web">Web</span>Studio
     </a>    
-    <ul>
-        <li> <a href="">Студия</a> </li>
-        <li> <a href="">Портфолио</a> </li>
-        <li> <a href="">Контакты</a> </li>
+    <ul class="navigation-list list">
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Студия</a> </li>
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Портфолио</a> </li>
+        <li class="navigation-list-item"> 
+            <a class="navigation-link link" href="">Контакты</a> </li>
     </ul>
 </nav>
-    <ul>
-        <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-        <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+    <ul class="list">
+        <li> <a class="header-mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+        <li> <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
     </ul>
     </header>
     <main>
-        <div><button type='button'>Все</button>
-<button type='button'>Веб-сайты</button>
-<button type='button'>Приложения</button>
-<button type='button'>Дизайн</button>
-<button type='button'>Маркетинг</button>
+        <div><button type='button' class="button">Все</button>
+<button type='button' class="button">Веб-сайты</button>
+<button type='button'class="button">Приложения</button>
+<button type='button'class="button">Дизайн</button>
+<button type='button'class="button">Маркетинг</button>
 </div>
 <section>
     <h1>Portfolio</h1>
-    <ul>
+    <ul class="list">
         <li>
-            <a href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
+            <h2 class="subtitle-portfolio">Технокряк</h2>
+            <p class="description-portfolio">Веб-сайт</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""> <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""> <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star">
+            <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
+            <p class="description-portfolio">Дизайн</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/seafood.jpg" alt="Ресторан Seafood">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/seafood.jpg" alt="Ресторан Seafood">
+            <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
+            <p class="description-portfolio">Приложение</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/prime.jpg" alt="Проект Prime">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/prime.jpg" alt="Проект Prime">
+            <h2 class="subtitle-portfolio">Проект Prime</h2>
+            <p class="description-portfolio">Маркетинг</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/boxes.jpg" alt="Проект Boxes">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/boxes.jpg" alt="Проект Boxes">
+            <h2 class="subtitle-portfolio">Проект Boxes</h2>
+            <p class="description-portfolio">Приложение</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
+            <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
+            <p class="description-portfolio">Веб-сайт</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/limedition.jpg" alt="Издание Limited Edition">
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/limedition.jpg" alt="Издание Limited Edition">
+            <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
+            <p class="description-portfolio">Дизайн</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/lab.jpg" alt="Проект LAB">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/lab.jpg" alt="Проект LAB">
+            <h2 class="subtitle-portfolio">Проект LAB</h2>
+            <p class="description-portfolio">Маркетинг</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
         <li>
-            <a href=""><img src="./images/growingb.jpg" alt="Growing Business">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. 
+            <a class="link" href=""><img src="./images/growingb.jpg" alt="Growing Business">
+            <h2 class="subtitle-portfolio">Growing Business</h2>
+            <p class="description-portfolio">Приложение</p>
+            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
@@ -111,16 +115,17 @@
     </main>
     <footer>
   
-        <div>  <a href="">
-            <span>Web</span>Studio</a>
+        <div>  <a class="logo link" href="">
+          <span class="web">Web</span>Studio
+      </a> 
           <address>
-              <p>г. Киев, пр-т Леси Украинки, 26</p>
-              <a href="mailto:info@example.com">info@example.com</a> <br/>
-              <a href="tel:+380991111111">+38 099 111 11 11</a>
+              <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+              <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
+              <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
           </address>
       </div>
       <div>
-      <b>ПРИСОЕДИНЯЙТЕСЬ</b>
+      <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
       <ul>
           <li> <a href="" aria-label="иконка инстаграма"></a>
           </li>
@@ -133,8 +138,8 @@
       </ul>
       </div>
       <div>
-          <b>ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+          <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
       </div>
       </footer>
-</body>
-</html>
+      </body>
+      </html>
