--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </a>    
     <ul class="navigation-list list">
         <li class="navigation-list-item"> 
-            <a class="navigation-link link" href="">Студия</a> </li>
+            <a class="navigation-link link" href="./index.html">Студия</a> </li>
         <li class="navigation-list-item"> 
-            <a class="navigation-link link" href="">Портфолио</a> </li>
+            <a class="navigation-link link" href="./portfolio.html">Портфолио</a> </li>
         <li class="navigation-list-item"> 
             <a class="navigation-link link" href="">Контакты</a> </li>
     </ul>
