--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 <button type='button' class="button">Маркетинг</button>
 </div>
 <section>
-    <h1>Portfolio</h1>
+    <h1 hidden>Portfolio</h1>
     <ul class="list">
         <li>
             <a class="link" href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
