--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header container">
         <nav class="navigation">
     <a class="logo link" href="">
         <span class="web">Web</span>Studio
