--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header class="header container">
+    <header class="header">
+        <div class="container">      
         <nav class="navigation">
     <a class="logo link" href="">
         <span class="web">Web</span>Studio
@@ -23,37 +24,40 @@
             <a class="navigation-link link" href="">Контакты</a> </li>
     </ul>
 </nav>
-    <ul class="list">
+    <ul class="header-address list">
         <li> <a class="header-mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li> <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
     </ul>
-    </header>
+    </div>
+</header>
     <main>
     <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="modal-button">Заказать услугу</button>
-    </section>
-<section>
-    <ul class="list">
-    <li>
+    </div>
+</section>
+<section class="section">
+    <ul class="special list">
+    <li class="speciality">
     <img src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
     <h3 class="subtitle">Внимание к деталям</h3> 
     <p class="description">Идейные соображения, а также начало повседневной 
         работы по формированию позиции. </p>  
     </li>
-    <li>
+    <li class="speciality">
 <img src="../homework-01/images/Vector(1).svg" alt="Пунктуальность">
 <h3 class="subtitle">Пунктуальность</h3> 
 <p class="description">Задача организации, в особенности же рамки
      и место обучения кадров влечет за собой. </p>  
 </li>
-    <li>
+    <li class="speciality">
 <img src="../homework-01/images/Vector(2).svg" alt="Планирование">
 <h3 class="subtitle">Планирование</h3> 
 <p class="description">Равным образом консультация с широким 
     активом в значительной степени обуславливает.</p>  
 </li>
-    <li>
+    <li class="speciality">
 <img src="../homework-01/images/Vector(3).svg" alt="Современные технологии">
 <h3 class="subtitle">Современные технологии</h3> 
 <p class="description">Значимость этих проблем настолько очевидна,
@@ -61,30 +65,30 @@
 </li>
 </ul>
 </section>
-<section>
+<section class="section">
 <h2 class="section-subtitle">Чем мы занимаемся</h2>
-<ul class="list">
-    <li>
+<ul class="doing list">
+    <li class="speciality">
    <img src="../homework-01/images/img.jpg" alt="Десктопные приложения"  width="370"
    height="294">
      <h3 class="subtitle-box">Десктопные приложения</h3>
     </li>
-    <li>
+    <li class="speciality">
         <img src="../homework-01/images/box.jpg" alt="Мобильные приложения"  width="370"
         height="294">
           <h3 class="subtitle-box">Мобильные приложения</h3>
     </li>
-    <li>
+    <li class="speciality">
         <img src="../homework-01/images/img(1).jpg" alt="Дизайнерские решения"  width="370"
         height="294">
           <h3 class="subtitle-box">Дизайнерские решения</h3>
     </li>
 </ul>
 </section>
-<section>
+<section class="team section">
     <h2 class="section-subtitle">Наша команда</h2>
-   <ul class="list">
-    <li>
+   <ul class="our-team list">
+    <li class="speciality">
         <img src="../homework-01/images/img(2).jpg" alt="Product Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
@@ -99,7 +103,7 @@
             </li>
         </ul>
     </li>
-    <li>
+    <li class="speciality">
         <img src="../homework-01/images/img(3).jpg" alt="Frontend Developer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
         <p lang="en" class="subtitle-position">Frontend Developer</p>
@@ -114,7 +118,7 @@
             </li>
         </ul>
     </li>
-    <li>
+    <li class="speciality">
         <img src="../homework-01/images/img(4).jpg" alt="Marketing" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Андрей Шевченко</h3>
         <p lang="en" class="subtitle-position">Marketing</p>
@@ -129,7 +133,7 @@
             </li>
         </ul>
     </li>
-    <li>
+    <li class="speciality">
         <img src="../homework-01/images/img(5).jpg" alt="UI Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Иван Николаев</h3>
         <p lang="en" class="subtitle-position">UI Designer</p>
@@ -146,7 +150,7 @@
     </li>
     </ul>
 </section>
-<section>
+<section class="section">
     <h2 class="section-subtitle">Постоянные клиенты</h2>
     <ul class="list">
         <li>
