замена постоянных клиентов

--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
 <section class="section">
     <ul class="special list">
     <li class="speciality">
-    <img src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
+    <img class="special-item-img" src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
     <h3 class="subtitle">Внимание к деталям</h3> 
     <p class="description">Идейные соображения, а также начало повседневной 
         работы по формированию позиции. </p>  
     </li>
     <li class="speciality">
-<img src="../homework-01/images/Vector(1).svg" alt="Пунктуальность">
+<img class="special-item-img" src="../homework-01/images/Vector(1).svg" alt="Пунктуальность">
 <h3 class="subtitle">Пунктуальность</h3> 
 <p class="description">Задача организации, в особенности же рамки
      и место обучения кадров влечет за собой. </p>  
 </li>
     <li class="speciality">
-<img src="../homework-01/images/Vector(2).svg" alt="Планирование">
+<img class="special-item-img" src="../homework-01/images/Vector(2).svg" alt="Планирование">
 <h3 class="subtitle">Планирование</h3> 
 <p class="description">Равным образом консультация с широким 
     активом в значительной степени обуславливает.</p>  
 </li>
     <li class="speciality">
-<img src="../homework-01/images/Vector(3).svg" alt="Современные технологии">
+<img class="special-item-img" src="../homework-01/images/Vector(3).svg" alt="Современные технологии">
 <h3 class="subtitle">Современные технологии</h3> 
 <p class="description">Значимость этих проблем настолько очевидна,
      что реализация плановых заданий.</p>  
@@ -88,63 +88,63 @@
 <section class="team section">
     <h2 class="section-subtitle">Наша команда</h2>
    <ul class="our-team list">
-    <li class="speciality">
-        <img src="../homework-01/images/img(2).jpg" alt="Product Designer" width="270" height="260">
+    <li class="speciality team-item">
+        <img class="our-team-img" src="../homework-01/images/img(2).jpg" alt="Product Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
-        <ul>
-            <li> <a href="" aria-label="иконка инстаграма"></a>
+        <ul class="team-icon">
+            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
             </li>
-            <li> <a href="" aria-label="иконка твиттера"></a>
+            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
             </li>
-            <li> <a href="" aria-label="иконка фейсбука"></a>
+            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
             </li>
-            <li> <a href="" aria-label="иконка ликедина"></a>
+            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
             </li>
         </ul>
     </li>
-    <li class="speciality">
-        <img src="../homework-01/images/img(3).jpg" alt="Frontend Developer" width="270" height="260">
+    <li class="speciality team-item">
+        <img class="our-team-img" src="../homework-01/images/img(3).jpg" alt="Frontend Developer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
         <p lang="en" class="subtitle-position">Frontend Developer</p>
-        <ul>
-            <li> <a href="" aria-label="иконка инстаграма"></a>
+        <ul class="team-icon">
+            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
             </li>
-            <li> <a href="" aria-label="иконка твиттера"></a>
+            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
             </li>
-            <li> <a href="" aria-label="иконка фейсбука"></a>
+            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
             </li>
-            <li> <a href="" aria-label="иконка ликедина"></a>
+            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
             </li>
         </ul>
     </li>
-    <li class="speciality">
-        <img src="../homework-01/images/img(4).jpg" alt="Marketing" width="270" height="260">
+    <li class="speciality team-item">
+        <img class="our-team-img" src="../homework-01/images/img(4).jpg" alt="Marketing" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Андрей Шевченко</h3>
         <p lang="en" class="subtitle-position">Marketing</p>
-        <ul>
-            <li> <a href="" aria-label="иконка инстаграма"></a>
+        <ul class="team-icon">
+            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
             </li>
-            <li> <a href="" aria-label="иконка твиттера"></a>
+            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
             </li>
-            <li> <a href="" aria-label="иконка фейсбука"></a>
+            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
             </li>
-            <li> <a href="" aria-label="иконка ликедина"></a>
+            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
             </li>
         </ul>
     </li>
-    <li class="speciality">
-        <img src="../homework-01/images/img(5).jpg" alt="UI Designer" width="270" height="260">
+    <li class="speciality team-item">
+        <img class="our-team-img" src="../homework-01/images/img(5).jpg" alt="UI Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Иван Николаев</h3>
         <p lang="en" class="subtitle-position">UI Designer</p>
-        <ul>
-            <li> <a href="" aria-label="иконка инстаграма"></a>
+        <ul class="team-icon">
+            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
             </li>
-            <li> <a href="" aria-label="иконка твиттера"></a>
+            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
             </li>
-            <li> <a href="" aria-label="иконка фейсбука"></a>
+            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
             </li>
-            <li> <a href="" aria-label="иконка ликедина"></a>
+            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
             </li>
         </ul>
     </li>
@@ -152,24 +152,24 @@
 </section>
 <section class="section">
     <h2 class="section-subtitle">Постоянные клиенты</h2>
-    <ul class="list">
-        <li>
-            <a href=""><img src="./images/client11.svg" alt="Company logo 1"/> </a>
+    <ul class="our-clients list">
+        <li class="speciality">
+            <a href=""><img src="./images/logo1.svg" alt="Company logo 1"/> </a>
         </li>
-        <li>
-            <a href=""><img src="./images/client22.svg" alt="Company logo 2"/> </a>
+        <li class="speciality">
+            <a href=""><img src="./images/logo2.svg" alt="Company logo 2"/> </a>
         </li>
-        <li>
-            <a href=""><img src="./images/client33.svg" alt="Company logo 3"/> </a>
+        <li class="speciality">
+            <a href=""><img src="./images/logo3.svg" alt="Company logo 3"/> </a>
         </li>
-        <li>
-            <a href=""><img src="./images/client44.svg" alt="Company logo 4"/> </a>
+        <li class="speciality">
+            <a href=""><img src="./images/logo4.svg" alt="Company logo 4"/> </a>
         </li>
-        <li>
-            <a href=""><img src="./images/client55.svg" alt="Company logo 5"/> </a>
+        <li class="speciality">
+            <a href=""><img src="./images/logo5.svg" alt="Company logo 5"/> </a>
         </li>
-        <li>
-            <a href=""><img src="./images/client66.svg" alt="Company logo 6"/> </a>
+        <li class="speciality">
+            <a href=""><img src="./images/logo6.svg" alt="Company logo 6"/> </a>
         </li>
     </ul>
 </section>
