--- a/index.html
+++ b/index.html
@@ -153,22 +153,22 @@
 <section class="section">
     <h2 class="section-subtitle">Постоянные клиенты</h2>
     <ul class="our-clients list">
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo1.svg" alt="Company logo 1"/> </a>
         </li>
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo2.svg" alt="Company logo 2"/> </a>
         </li>
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo3.svg" alt="Company logo 3"/> </a>
         </li>
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo4.svg" alt="Company logo 4"/> </a>
         </li>
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo5.svg" alt="Company logo 5"/> </a>
         </li>
-        <li class="speciality">
+        <li class="client-icon speciality">
             <a href=""><img src="./images/logo6.svg" alt="Company logo 6"/> </a>
         </li>
     </ul>
