--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
 </section>
 <section class="section">
     <ul class="special list">
-    <li class="speciality">
+    <li class="speciality features">
     <img class="special-item-img" src="../homework-01/images/Vector.svg" alt="Внимание к деталям">
     <h3 class="subtitle">Внимание к деталям</h3> 
     <p class="description">Идейные соображения, а также начало повседневной 
         работы по формированию позиции. </p>  
     </li>
-    <li class="speciality">
+    <li class="speciality features">
 <img class="special-item-img" src="../homework-01/images/Vector(1).svg" alt="Пунктуальность">
 <h3 class="subtitle">Пунктуальность</h3> 
 <p class="description">Задача организации, в особенности же рамки
      и место обучения кадров влечет за собой. </p>  
 </li>
-    <li class="speciality">
+    <li class="speciality features">
 <img class="special-item-img" src="../homework-01/images/Vector(2).svg" alt="Планирование">
 <h3 class="subtitle">Планирование</h3> 
 <p class="description">Равным образом консультация с широким 
     активом в значительной степени обуславливает.</p>  
 </li>
-    <li class="speciality">
+    <li class="speciality features">
 <img class="special-item-img" src="../homework-01/images/Vector(3).svg" alt="Современные технологии">
 <h3 class="subtitle">Современные технологии</h3> 
 <p class="description">Значимость этих проблем настолько очевидна,
@@ -67,7 +67,7 @@
 </section>
 <section class="section">
 <h2 class="section-subtitle">Чем мы занимаемся</h2>
-<ul class="doing list">
+<ul class="doing-list list">
     <li class="speciality">
    <img src="../homework-01/images/img.jpg" alt="Десктопные приложения"  width="370"
    height="294">
@@ -174,9 +174,10 @@
     </ul>
 </section>
 </main>
-<footer>
-  
-  <div>  <a class="logo link" href="">
+<footer class="footer">
+    <div class="container">
+  <div class="footer-logo">  
+      <a class="logo link" href="">
     <span class="web">Web</span>Studio
 </a> 
     <address>
@@ -185,22 +186,24 @@
         <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
     </address>
 </div>
-<div>
+<div class="footer-subscribe">
 <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
-<ul>
-    <li> <a href="" aria-label="иконка инстаграма"></a>
+<ul class="footer-icons">
+    <li class="footer-icons-label"> <a  href="" aria-label="иконка инстаграма"></a>
     </li>
-    <li> <a href="" aria-label="иконка твиттера"></a>
+    <li class="footer-icons-label"> <a  href="" aria-label="иконка твиттера"></a>
     </li>
-    <li> <a href="" aria-label="иконка фейсбука"></a>
+    <li class="footer-icons-label"> <a  href="" aria-label="иконка фейсбука"></a>
     </li>
-    <li> <a href="" aria-label="иконка ликедина"></a>
+    <li class="footer-icons-label"> <a  href="" aria-label="иконка ликедина"></a>
     </li>
 </ul>
 </div>
 <div>
     <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+    <button class="button">Подписаться</button>
 </div>
+    </div>
 </footer>
 </body>
 </html>
