Лого соцсетей изменила на картинки

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
         <ul class="team-icon">
-            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
+            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
+            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
+            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
+            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -108,13 +108,13 @@
         <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
         <p lang="en" class="subtitle-position">Frontend Developer</p>
         <ul class="team-icon">
-            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
+            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
+            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
+            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
+            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -123,13 +123,13 @@
         <h3 lang="ru" class="subtitle-name">Андрей Шевченко</h3>
         <p lang="en" class="subtitle-position">Marketing</p>
         <ul class="team-icon">
-            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
+            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
+            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
+            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
+            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -138,13 +138,13 @@
         <h3 lang="ru" class="subtitle-name">Иван Николаев</h3>
         <p lang="en" class="subtitle-position">UI Designer</p>
         <ul class="team-icon">
-            <li> <a class="icon" href="" aria-label="иконка инстаграма"></a>
+            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка твиттера"></a>
+            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка фейсбука"></a>
+            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li> <a class="icon" href="" aria-label="иконка ликедина"></a>
+            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -189,13 +189,17 @@
 <div class="footer-subscribe">
 <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
 <ul class="footer-icons">
-    <li class="footer-icons-label"> <a  href="" aria-label="иконка инстаграма"></a>
+    <li class="footer-icons-label"> 
+        <a  href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
     </li>
-    <li class="footer-icons-label"> <a  href="" aria-label="иконка твиттера"></a>
+    <li class="footer-icons-label"> 
+        <a  href=""> <img src="./images/twitter-f.svg" alt="Twitter logo"/> </a>
     </li>
-    <li class="footer-icons-label"> <a  href="" aria-label="иконка фейсбука"></a>
+    <li class="footer-icons-label"> 
+        <a  href=""> <img src="./images/facebook-f.svg" alt="Facebook logo"/> </a>
     </li>
-    <li class="footer-icons-label"> <a  href="" aria-label="иконка ликедина"></a>
+    <li class="footer-icons-label"> 
+        <a  href=""> <img src="./images/linkedin-f.svg" alt="Linkedin logo"/> </a>
     </li>
 </ul>
 </div>
