--- a/portfolio.html
+++ b/portfolio.html
@@ -10,24 +10,26 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">      
         <nav class="navigation">
     <a class="logo link" href="">
         <span class="web">Web</span>Studio
     </a>    
     <ul class="navigation-list list">
         <li class="navigation-list-item"> 
-            <a class="navigation-link link" href="">Студия</a> </li>
+            <a class="navigation-link link" href="./index.html">Студия</a> </li>
         <li class="navigation-list-item"> 
-            <a class="navigation-link link" href="">Портфолио</a> </li>
+            <a class="navigation-link link" href="./portfolio.html">Портфолио</a> </li>
         <li class="navigation-list-item"> 
             <a class="navigation-link link" href="">Контакты</a> </li>
     </ul>
 </nav>
-    <ul class="list">
+    <ul class="header-address list">
         <li> <a class="header-mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
         <li> <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
     </ul>
-    </header>
+    </div>
+</header>
     <main>
         <div><button type='button' class="button">Все</button>
 <button type='button' class="button">Веб-сайты</button>
@@ -113,33 +115,40 @@
     </ul>
 </section>
     </main>
-    <footer>
-  
-        <div>  <a class="logo link" href="">
-          <span class="web">Web</span>Studio
-      </a> 
-          <address>
-              <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-              <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
-              <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-          </address>
-      </div>
-      <div>
-      <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
-      <ul>
-          <li> <a href="" aria-label="иконка инстаграма"></a>
-          </li>
-          <li> <a href="" aria-label="иконка твиттера"></a>
-          </li>
-          <li> <a href="" aria-label="иконка фейсбука"></a>
-          </li>
-          <li> <a href="" aria-label="иконка ликедина"></a>
-          </li>
-      </ul>
-      </div>
-      <div>
-          <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-      </div>
-      </footer>
+    <footer class="footer">
+        <div class="container">
+      <div class="footer-logo">  
+          <a class="logo link" href="">
+        <span class="web">Web</span>Studio
+    </a> 
+        <address>
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a> <br/>
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+    </div>
+    <div class="footer-subscribe">
+    <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
+    <ul class="footer-icons">
+        <li class="footer-icons-label"> 
+            <a  href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
+        </li>
+        <li class="footer-icons-label"> 
+            <a  href=""> <img src="./images/twitter-f.svg" alt="Twitter logo"/> </a>
+        </li>
+        <li class="footer-icons-label"> 
+            <a  href=""> <img src="./images/facebook-f.svg" alt="Facebook logo"/> </a>
+        </li>
+        <li class="footer-icons-label"> 
+            <a  href=""> <img src="./images/linkedin-f.svg" alt="Linkedin logo"/> </a>
+        </li>
+    </ul>
+    </div>
+    <div>
+        <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+        <button class="button">Подписаться</button>
+    </div>
+        </div>
+    </footer>
       </body>
       </html>
