--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
         <ul class="team-icon">
-            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
+            <li class="icon"> <a  href="" aria-label="Instagram"> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
             <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
@@ -205,7 +205,7 @@
 </div>
 <div>
     <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-    <button class="button">Подписаться</button>
+    <button class="footer-button">Подписаться</button>
 </div>
     </div>
 </footer>
