--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
         <ul class="team-icon">
-            <li class="icon"> <a  href="" aria-label="Instagram"> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
+            <li class="icon"> <a class="link" href aria-label=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
+            <li class="icon"> <a  class="link" href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
+            <li class="icon"> <a class="link" href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
+            <li class="icon"> <a class="link" href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -108,13 +108,13 @@
         <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
         <p lang="en" class="subtitle-position">Frontend Developer</p>
         <ul class="team-icon">
-            <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
+            <li class="icon"> <a href=""><img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
+            <li class="icon"> <a href=""><img src="./images/twit1.svg" alt="Twitter logo"/></a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/faceb1.svg" alt="Facebook logo"/></a>
+            <li class="icon"> <a href=""><img src="./images/faceb1.svg" alt="Facebook logo"/></a>
             </li>
-            <li class="icon"> <a  href=""> <img src="./images/link1.svg" alt="Linkedin logo"/></a>
+            <li class="icon"> <a href=""><img src="./images/link1.svg" alt="Linkedin logo"/></a>
             </li>
         </ul>
     </li>
@@ -190,7 +190,7 @@
 <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
 <ul class="footer-icons">
     <li class="footer-icons-label"> 
-        <a  href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
+     <a href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
     </li>
     <li class="footer-icons-label"> 
         <a  href=""> <img src="./images/twitter-f.svg" alt="Twitter logo"/> </a>
