--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
     </div>
 </header>
     <main>
-        <div><button type='button' class="button">Все</button>
+        <div class="button-item">
+<button type='button' class="button">Все</button>
 <button type='button' class="button">Веб-сайты</button>
 <button type='button' class="button">Приложения</button>
 <button type='button' class="button">Дизайн</button>
@@ -39,76 +40,76 @@
 </div>
 <section>
     <h1 hidden>Portfolio</h1>
-    <ul class="list">
-        <li>
-            <a class="link" href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
+    <ul class="portfolio-container list">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""> <img src="./images/tekhno.jpg" alt="Технокряк">
             <h2 class="subtitle-portfolio">Технокряк</h2>
             <p class="description-portfolio">Веб-сайт</p>
             <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""> <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""> <img src="./images/neworlean.jpg" alt="Постер New Orlean vs Golden Star">
             <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
             <p class="description-portfolio">Дизайн</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/seafood.jpg" alt="Ресторан Seafood">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/seafood.jpg" alt="Ресторан Seafood">
             <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
             <p class="description-portfolio">Приложение</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/prime.jpg" alt="Проект Prime">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/prime.jpg" alt="Проект Prime">
             <h2 class="subtitle-portfolio">Проект Prime</h2>
             <p class="description-portfolio">Маркетинг</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/boxes.jpg" alt="Проект Boxes">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/boxes.jpg" alt="Проект Boxes">
             <h2 class="subtitle-portfolio">Проект Boxes</h2>
             <p class="description-portfolio">Приложение</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/inspiration.jpg" alt="Inspiration has no Borders">
             <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
             <p class="description-portfolio">Веб-сайт</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/limedition.jpg" alt="Издание Limited Edition">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/limedition.jpg" alt="Издание Limited Edition">
             <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
             <p class="description-portfolio">Дизайн</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/lab.jpg" alt="Проект LAB">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/lab.jpg" alt="Проект LAB">
             <h2 class="subtitle-portfolio">Проект LAB</h2>
             <p class="description-portfolio">Маркетинг</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
-        <li>
-            <a class="link" href=""><img src="./images/growingb.jpg" alt="Growing Business">
+        <li class="portfolio-list">
+            <a class="portfolio-link link" href=""><img src="./images/growingb.jpg" alt="Growing Business">
             <h2 class="subtitle-portfolio">Growing Business</h2>
             <p class="description-portfolio">Приложение</p>
-            <p class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
+            <p hidden class="text-portfolio">Технокряк это современная площадка распространения коронавируса. 
                 Компании используют эту платформу для цифрового шпионажа и атак 
                 на защищённые сервера конкурентов.</p> </a>
         </li>
@@ -146,7 +147,7 @@
     </div>
     <div>
         <b class="footer-subtitle">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-        <button class="button">Подписаться</button>
+        <button class="footer-button">Подписаться</button>
     </div>
         </div>
     </footer>
