список иконок соцсетей

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <img class="our-team-img" src="../homework-01/images/img(2).jpg" alt="Product Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Николай Кучеренко</h3>
         <p lang="en" class="subtitle-position">Product Designer</p>
-        <ul class="team-icon">
+        <ul class="team-icon list">
             <li class="icon"> <a class="link" href aria-label=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
             <li class="icon"> <a  class="link" href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
@@ -107,7 +107,7 @@
         <img class="our-team-img" src="../homework-01/images/img(3).jpg" alt="Frontend Developer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Ольга Иванова</h3>
         <p lang="en" class="subtitle-position">Frontend Developer</p>
-        <ul class="team-icon">
+        <ul class="team-icon list">
             <li class="icon"> <a href=""><img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
             <li class="icon"> <a href=""><img src="./images/twit1.svg" alt="Twitter logo"/></a>
@@ -122,7 +122,7 @@
         <img class="our-team-img" src="../homework-01/images/img(4).jpg" alt="Marketing" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Андрей Шевченко</h3>
         <p lang="en" class="subtitle-position">Marketing</p>
-        <ul class="team-icon">
+        <ul class="team-icon list">
             <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
             <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
@@ -137,7 +137,7 @@
         <img class="our-team-img" src="../homework-01/images/img(5).jpg" alt="UI Designer" width="270" height="260">
         <h3 lang="ru" class="subtitle-name">Иван Николаев</h3>
         <p lang="en" class="subtitle-position">UI Designer</p>
-        <ul class="team-icon">
+        <ul class="team-icon list">
             <li class="icon"> <a  href=""> <img src="./images/insta2.svg" alt="Instagram logo"/> </a>
             </li>
             <li class="icon"> <a  href=""> <img src="./images/twit1.svg" alt="Twitter logo"/></a>
@@ -188,7 +188,8 @@
 </div>
 <div class="footer-subscribe">
 <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
-<ul class="footer-icons">
+        <ul class="team-icon ">
+<ul class="footer-icons list">
     <li class="footer-icons-label"> 
      <a href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
     </li>
