--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
     </div>
     <div class="footer-subscribe">
     <b class="footer-subtitle">ПРИСОЕДИНЯЙТЕСЬ</b>
-    <ul class="footer-icons">
+    <ul class="footer-icons list">
         <li class="footer-icons-label"> 
             <a  href=""><img src="./images/instagram-f.svg" alt="Instagram logo"/> </a>
         </li>
